fixed scrollbar bug

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@
   margin:0;
   padding:0;
   color:#706f6f;
-  overflow-x: hidden;
 }
 
 .clearfix:after {
@@ -290,7 +289,8 @@ padding-bottom: 30px;
 footer {
   background-color:#706f6f;
   height: 100px;
-  width: 100vw;
+  width: 99.1vw;
+  margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -302,7 +302,7 @@ footer p {
   text-align: center;
   font-size: 0.8em;
   padding-bottom:0px;
-  width: 100%;
+  width: 95%;
   margin-bottom: 16px;
   position: relative;
 
